配置提交